# software-design-lab6

./: CMakeLists.txt  main.cpp
parser/: tokenizer.h
token/: add.h  brace.cpp  brace.h  divide.h  multiply.h  number_token.cpp  number_token.h  operation.cpp  operation.h  subtract.h  token.h
visitor/: calc_visitor.h  parser_visitor.h  print_visitor.h  token_visitor.h
